--- a/.github/workflows/buildimage.yaml
+++ b/.github/workflows/buildimage.yaml
@@ -16,10 +16,13 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}  # Replace with your region
 
-      - name: Set up Docker
-        uses: actions/setup-docker@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+  
+      - name: Set up Docker Cache
+        uses: docker/cache-action@v2
         with:
-          docker-version: 'latest'
+          path: /tmp/.buildx-cache
 
 
       - name: Login to ECR
