--- a/.github/workflows/buildimage.yaml
+++ b/.github/workflows/buildimage.yaml
@@ -27,5 +27,5 @@ jobs:
 
       - name: Build and push image
         run: |
-          docker build -t ${{ secrets.ACCOUNT_ID }}.dkr.ecr.us-west-2.amazonaws.com/test:test .
-          docker push ${{ secrets.ACCOUNT_ID }}.dkr.ecr.us-west-2.amazonaws.com/test:test
+          docker build -t ${{ secrets.ACCOUNT_ID }}.dkr.ecr.us-west-2.amazonaws.com/vasman-test:vasman-test .
+          docker push ${{ secrets.ACCOUNT_ID }}.dkr.ecr.us-west-2.amazonaws.com/vasman-test:vasman-test
