--- a/.github/workflows/buildimage.yaml
+++ b/.github/workflows/buildimage.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v1
         with:
-          registry-id: ${{ secrets.AWS_ACCOUNT_ID }}
+          registry-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           repository-name: vasman-test
 
       - name: Build and Push Image
