--- a/.github/workflows/deployApp.yaml
+++ b/.github/workflows/deployApp.yaml
@@ -28,7 +28,7 @@ jobs:
       run: curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
 
     - name: List Namespaces
-      run: kubectl get namespaces
+      run: kubectl apply -f deployment.yaml
 
 
 
