--- a/.github/workflows/deployApp.yaml
+++ b/.github/workflows/deployApp.yaml
@@ -24,11 +24,12 @@ jobs:
     - name: Update kubeconfig
       run: aws eks update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }} --region ${{ secrets.AWS_REGION }}
 
-    - name: Install Helm
-      run: curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
 
-    - name: List Namespaces
-      run: kubectl apply -f deployment.yaml
+    - name: Deployment
+      run: kubectl apply -f deployment.yaml 
+
+    - name: Deploy Service
+      run: kubectl apply -f service.yaml
 
 
 
