--- a/service.yaml
+++ b/service.yaml
@@ -3,10 +3,10 @@ kind: Service
 metadata:
   name: nginx-service
 spec:
+  type: NodePort
   selector:
     app: nginx
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80
-    nodePort: 30080  # Choose a free port
+    - port: 80
+      targetPort: 80
+      nodePort: 30007  # nodePort must be in the range 30000-32767
