--- a/.github/workflows/deployApp.yaml
+++ b/.github/workflows/deployApp.yaml
@@ -31,5 +31,6 @@ jobs:
     - name: Deploy Service
       run: kubectl apply -f service.yaml
 
-
+    - name: Deploy HPA
+      run: kubectl apply -f hpa.yaml
 
