--- a/deployment.yaml
+++ b/deployment.yaml
@@ -2,9 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
-  namespace: vasman-namespace
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: nginx
@@ -13,14 +12,17 @@ spec:
       labels:
         app: nginx
     spec:
+      imagePullSecrets:
+        - name: dockerhub-secret
       containers:
       - name: nginx
-        image: nginx:1.19.6
+        image: nginx:latest
         ports:
         - containerPort: 80
-        securityContext:
-          capabilities:
-            drop: ["ALL"]
-          runAsNonRoot: true
-          runAsUser: 1000
-          readOnlyRootFilesystem: true
+        resources:
+          limits:
+            memory: "256Mi"  # Maximum memory allowed
+            cpu: "200m"       # Maximum CPU allowed (200 milliCPU)
+          requests:
+            memory: "128Mi"  # Initial memory request
+            cpu: "100m"
